Wed Jul 13 14:03:47 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dcps.mpb:
        * dds/DdsDcps.mpc:

          Removing checks for the Dcps in the TAO_ORBSVCS list.

Wed Jul 13 10:48:01 MST 2005  Trevor Fields  <fields_t@ociweb.com>
        * dds/DCPS/Service_Participant.h:

          Changed to new Root_POA.h for all builds.

Wed Jul 13 10:28:48 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * tests/transport/simple_bp/PubDriver.cpp:
        * tests/transport/simple_bp/PubDriver.h:
        * tests/transport/simple_bp/SimpleDataReader.cpp:
        * tests/transport/simple_bp/SimpleDataReader.h:
        * tests/transport/simple_bp/SimpleDataWriter.cpp:
        * tests/transport/simple_bp/SimpleDataWriter.h:
        * tests/transport/simple_bp/SimplePublisher.cpp:
        * tests/transport/simple_bp/SimplePublisher.h:
        * tests/transport/simple_bp/SimpleSubscriber.cpp:
        * tests/transport/simple_bp/SimpleSubscriber.h:
        * tests/transport/simple_bp/SubDriver.cpp:
        * tests/transport/simple_bp/pub_main.cpp:
        * tests/transport/simple_bp/run_test.pl:
        * tests/transport/simple_bp/sub_main.cpp:

          Modified the publisher to take a size parameter (-c ).

Tue Jul 12 14:33:53 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.inl:
        * dds/DCPS/transport/framework/TransportDefs.h:

          Increased the receive buffer size and corrected a comment.

Mon Jul 11 13:38:21 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dcps.mpb:
        * dds/DdsDcps.mpc:

          Set the library path correctly

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/transport/framework/TransportDefs.h:

          Change default values to account for correct memory usage.

Wed Jun 29 22:35:29 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataWriterImpl.cpp:
          Fixed array indexing.
